完成 Client UI P3 Craft 状态与意图边界
Model: gpt-5